@@ -1,7 +1,7 @@
 Package: Matrix
 Version: 0.999375-15
-Date: 2008-09-22
-Title: A Matrix package for R
+Date: 2008-09-23
+Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Doug and Martin <Matrix-authors@R-project.org>
 Description: Classes and methods for dense and sparse matrices and
